--- a/ng-new-app/src/app/app.component.html
+++ b/ng-new-app/src/app/app.component.html
@@ -1,1 +1,6 @@
-<div class="col-lg-1">sadsa</div>
+<div class="col-lg-1">hivno</div>
+<app-servers></app-servers>
+<hr>
+<h2>alerts</h2>
+<app-warning-alert></app-warning-alert>
+<app-success-alert></app-success-alert>
