--- a/course-project/src/app/app.component.html
+++ b/course-project/src/app/app.component.html
@@ -1,6 +1,10 @@
 <app-header></app-header>
 <div class="container">
   <div class="row">
-    <div class="col-sm">{{title}}</div>
+    <div class="col-md-12">
+      <p>{{title}}</p>
+      <app-recipes></app-recipes>
+      <app-shopping-list></app-shopping-list>
+    </div>
   </div>
 </div>
