--- a/game-control/src/app/app.component.html
+++ b/game-control/src/app/app.component.html
@@ -1,16 +1,25 @@
 <div class="container">
   <div class="row">
-    <app-game-control></app-game-control>
+    <h2>Game control</h2>
+    <app-game-control
+      (numberReceived)="onNumberReceived($event)"
+    ></app-game-control>
   </div>
 
   <div class="row">
     <div class="col-md-6">
       <h2>Odd</h2>
-        <app-odd></app-odd>
+      <app-odd
+        [number]="number"
+        *ngFor="let number of oddNumbers"
+      ></app-odd>
     </div>
     <div class="col-md-6">
       <h2>Even</h2>
-      <app-even></app-even>
+      <app-even
+        [number]="number"
+        *ngFor="let number of evenNumbers"
+      ></app-even>
     </div>
   </div>
 </div>
