--- a/game-control/src/app/game-control/game-control.component.html
+++ b/game-control/src/app/game-control/game-control.component.html
@@ -1,1 +1,10 @@
-<p>game-control works!</p>
+<div class="btn-toolbar">
+  <button
+    class="btn btn-success"
+    (click)="onGameStart()"
+  >Start</button>
+  <button
+    class="btn btn-danger"
+    (click)="onGameStop()"
+  >Stop</button>
+</div>
