--- a/course-project/src/app/header/header.component.html
+++ b/course-project/src/app/header/header.component.html
@@ -7,10 +7,10 @@
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
         <li>
-          <a href="#">Recipes</a>
+          <a href="#" (click)="onSelect(selectTypes.Recipe)">Recipes</a>
         </li>
         <li>
-          <a href="#">Shopping list</a>
+          <a href="#" (click)="onSelect(selectTypes.ShoppingList)">Shopping list</a>
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
