recipe select and styles

--- a/course-project/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/course-project/src/app/recipes/recipe-list/recipe-list.component.html
@@ -8,7 +8,7 @@
   <div class="col-xs-12" *ngFor="let recipe of recipes">
     <app-recipe-item
       [recipe]="recipe"
-      (click)="onRecipeSelect(recipe)"
+      (recipeSelected)="onRecipeSelect(recipe)"
     ></app-recipe-item>
   </div>
 </div>
