--- a/course-project/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/course-project/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-xs-12">
-    <img src="" alt="" class="img-responsive">
+    <img [src]="recipe.imagePath" alt="" class="img-responsive recipe-img">
   </div>
 </div>
 <div class="row">
@@ -20,6 +20,11 @@
         </li>
       </ul>
     </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-xs-12">
+    {{recipe.description}}
   </div>
 </div>
 <div class="row">
