--- a/course-project/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/course-project/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -4,19 +4,38 @@
       <div class="row">
         <div class="col-sm-5 form-group">
           <label for="name">Name</label>
-          <input type="text" id="name" class="form-control">
+          <input
+            type="text"
+            id="name"
+            class="form-control"
+            name="name"
+            [(ngModel)]="ingredient.name"
+          >
         </div>
         <div class="col-sm-2 form-group">
           <label for="amount">Amount</label>
-          <input type="number" id="amount" class="form-control">
+          <input
+            type="number"
+            id="amount"
+            name="amount"
+            class="form-control"
+            [(ngModel)]="ingredient.amount"
+          >
         </div>
       </div>
 
       <div class="row">
         <div class="col-xs-12 btn-toolbar">
-          <button class="btn btn-success">Add</button>
+          <button
+            class="btn btn-success"
+            [disabled]="!isIngredientValid()"
+            (click)="onIngredientAdd()"
+          >Add</button>
           <button class="btn btn-danger">Delete</button>
-          <button class="btn btn-primary">Clear</button>
+          <button
+            class="btn btn-primary"
+            (click)="onIngredientClear()"
+          >Clear</button>
         </div>
       </div>
     </form>
